@@ -23,11 +23,8 @@
  */
 package com.synopsys.integration.alert.channel.hipchat.descriptor;
 
-import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
 
-import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
@@ -38,31 +35,20 @@ import com.synopsys.integration.alert.common.descriptor.config.field.ConfigField
 import com.synopsys.integration.alert.common.descriptor.config.field.NumberConfigField;
 import com.synopsys.integration.alert.common.descriptor.config.field.SelectConfigField;
 import com.synopsys.integration.alert.common.descriptor.config.ui.ChannelDistributionUIConfig;
-import com.synopsys.integration.alert.web.model.configuration.FieldModel;
-import com.synopsys.integration.alert.web.model.configuration.FieldValueModel;
 
 @Component
 public class HipChatDistributionUIConfig extends ChannelDistributionUIConfig {
 
     @Autowired
-    public HipChatDistributionUIConfig(BaseConfigurationAccessor configurationAccessor, BaseDescriptorAccessor descriptorAccessor) {
+    public HipChatDistributionUIConfig(final BaseConfigurationAccessor configurationAccessor, final BaseDescriptorAccessor descriptorAccessor) {
         super(HipChatDescriptor.HIP_CHAT_LABEL, HipChatDescriptor.HIP_CHAT_URL, HipChatDescriptor.HIP_CHAT_ICON, configurationAccessor, descriptorAccessor);
     }
 
     @Override
     public List<ConfigField> createChannelDistributionFields() {
-        final ConfigField roomId = NumberConfigField.createRequired(HipChatDescriptor.KEY_ROOM_ID, "Room Id", this::validateRoomID);
+        final ConfigField roomId = NumberConfigField.createRequired(HipChatDescriptor.KEY_ROOM_ID, "Room Id");
         final ConfigField notify = CheckboxConfigField.create(HipChatDescriptor.KEY_NOTIFY, "Notify");
-        final ConfigField color = SelectConfigField.create(HipChatDescriptor.KEY_COLOR, "Color", Arrays.asList("Yellow", "Green", "Red", "Purple", "Gray", "Random"));
+        final ConfigField color = SelectConfigField.create(HipChatDescriptor.KEY_COLOR, "Color", List.of("Yellow", "Green", "Red", "Purple", "Gray", "Random"));
         return List.of(roomId, notify, color);
-    }
-
-    private Collection<String> validateRoomID(final FieldValueModel fieldToValidate, final FieldModel fieldModel) {
-        final String roomId = fieldToValidate.getValue().orElse(null);
-        if (!StringUtils.isNumeric(roomId)) {
-            return List.of("Room Id must be an integer value");
-        }
-
-        return List.of();
     }
 }
